ensure icons do not overflow

--- a/src/components/HojaIcons/HojaIcons.css
+++ b/src/components/HojaIcons/HojaIcons.css
@@ -1,4 +1,5 @@
 .icon {
   color: var(--text-color-secondary);
   max-width: 100%;
+  max-height: 100%;
 }
